--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -9,10 +9,10 @@
         </h1>
         <form>
             <mat-form-field>
-                <input matInput placeholder="E-mail">
+                <input matInput placeholder="E-mail" [(ngModel)]="email" name="email">
             </mat-form-field>
             <mat-form-field>
-                <input matInput placeholder="Senha">
+                <input matInput placeholder="Senha" [(ngModel)]="password" name="password">
             </mat-form-field>
             <a href="">Esqueceu sua senha?</a>
         </form>
