--- a/src/app/views/account-register/account-register.component.html
+++ b/src/app/views/account-register/account-register.component.html
@@ -1,1 +1,34 @@
-<p>account-register works!</p>
+<div class="container">
+    <div class="logo mat-app-background">
+        <h1>ILUSTRAÇÃO</h1>
+    </div>
+
+    <div class="formulario">
+        <h1>
+            Seja bem-vindo ao SIGIOT
+        </h1>
+        <form>
+            <h2>Cadastro</h2>
+            <mat-form-field>
+                <input matInput placeholder="Nome" [(ngModel)]="name" name="name">
+            </mat-form-field>
+            <mat-form-field>
+                <input matInput type="tel" placeholder="Telefone" [(ngModel)]="cellphone" name="cellphone">
+            </mat-form-field>
+            <mat-form-field>
+                <input matInput type="email" placeholder="E-mail" [(ngModel)]="email" name="email">
+            </mat-form-field>
+            <mat-form-field>
+                <input matInput type="password" placeholder="Senha" [(ngModel)]="password" name="password">
+            </mat-form-field>
+            <mat-form-field>
+                <input matInput type="password" placeholder="Confirmar senha" [(ngModel)]="confirmPassword" name="confirmPassword">
+            </mat-form-field>
+        </form>
+        <div class="botoes">
+            <button mat-raised-button (click)="register()" color="primary">
+                CADASTRE-SE
+            </button>
+        </div>
+    </div>
+</div>
