[FIN] Finalizado rotas basicas e controle de usuario

--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,1 +1,6 @@
-<p>HOME PAGE</p>
+<mat-card class="home mat-elevation-z3">
+    <mat-card-title>Seja bem-vindo ao SIGIOT!</mat-card-title>
+    <mat-card-subtitle>
+        Sistema Integrado de Gerenciamento IoT.
+    </mat-card-subtitle>
+</mat-card>
