--- a/src/app/views/account-register/account-register.component.html
+++ b/src/app/views/account-register/account-register.component.html
@@ -7,22 +7,49 @@
         <h1>
             Seja bem-vindo ao SIGIOT
         </h1>
-        <form>
+        <form [formGroup]="form" novalidate>
             <h2>Cadastro</h2>
             <mat-form-field>
-                <input matInput placeholder="Nome" [(ngModel)]="name" name="name">
+                <input matInput placeholder="Nome" formControlName="name">
+                <mat-error *ngIf="form.get('name')?.hasError('required') && form.get('name')?.touched">
+                    Campo obrigatório
+                </mat-error>
             </mat-form-field>
             <mat-form-field>
-                <input matInput type="tel" placeholder="Telefone" [(ngModel)]="cellphone" name="cellphone">
+                <input matInput type="tel" placeholder="Telefone" formControlName="cellphone">
+                <mat-error *ngIf="form.get('cellphone')?.hasError('minlength') && form.get('cellphone')?.touched">
+                    Telefone inválido
+                </mat-error>
+                <mat-error *ngIf="form.get('cellphone')?.hasError('required') && form.get('cellphone')?.touched">
+                    Campo obrigatório
+                </mat-error>
             </mat-form-field>
             <mat-form-field>
-                <input matInput type="email" placeholder="E-mail" [(ngModel)]="email" name="email">
+                <input matInput type="email" placeholder="E-mail" formControlName="email">
+                <mat-error *ngIf="form.get('email')?.hasError('email') && form.get('email')?.touched">
+                    E-mail inválido
+                </mat-error>
+                <mat-error *ngIf="form.get('email')?.hasError('required') && form.get('email')?.touched">
+                    Campo obrigatório
+                </mat-error>
             </mat-form-field>
             <mat-form-field>
-                <input matInput type="password" placeholder="Senha" [(ngModel)]="password" name="password">
+                <input matInput type="password" placeholder="Senha" formControlName="password">
+                <mat-error *ngIf="form.get('password')?.hasError('minlength') && form.get('password')?.touched">
+                    Sua senha deve conter no mínimo 8 caracteres
+                </mat-error>
+                <mat-error *ngIf="form.get('password')?.hasError('required') && form.get('password')?.touched">
+                    Campo obrigatório
+                </mat-error>
             </mat-form-field>
             <mat-form-field>
-                <input matInput type="password" placeholder="Confirmar senha" [(ngModel)]="confirmPassword" name="confirmPassword">
+                <input matInput type="password" placeholder="Confirmar senha" formControlName="confirmPassword">
+                <mat-error *ngIf="form.get('confirmPassword')?.hasError('minlength') && form.get('confirmPassword')?.touched">
+                    Sua senha deve conter no mínimo 8 caracteres
+                </mat-error>
+                <mat-error *ngIf="form.get('confirmPassword')?.hasError('required') && form.get('confirmPassword')?.touched">
+                    Campo obrigatório
+                </mat-error>
             </mat-form-field>
         </form>
         <div class="botoes">
