--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -12,7 +12,7 @@
                 <input matInput placeholder="E-mail" [(ngModel)]="email" name="email">
             </mat-form-field>
             <mat-form-field>
-                <input matInput placeholder="Senha" [(ngModel)]="password" name="password">
+                <input matInput placeholder="Senha" [(ngModel)]="password" name="password" type="password">
             </mat-form-field>
             <a href="">Esqueceu sua senha?</a>
         </form>
