[FIN] Finalizado tela de board details [ADD] Adicao de tela para o setup [ADJ] Ajustes nos layouts, add flexbox

--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,5 +1,5 @@
 <mat-card class="home mat-elevation-z3">
-    <mat-card-title>Seja bem-vindo ao SIGIOT!</mat-card-title>
+    <mat-card-title>Seja bem-vindo ao SIGIoT!</mat-card-title>
     <mat-card-subtitle>
         Sistema Integrado de Gerenciamento IoT.
     </mat-card-subtitle>
