--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -1,6 +1,7 @@
 <div class="container">
-    <div class="logo mat-app-background">
-        <h1>ILUSTRAÇÃO</h1>
+    <!-- <div class="logo mat-app-background" style="flex-grow: 1"> -->
+    <div class="logo" style="flex-grow: 1">
+        <!-- <img src="assets/background_authenticate.png"> -->
     </div>
 
     <div class="formulario">
