--- a/src/app/templates/dashboard/dashboard.component.html
+++ b/src/app/templates/dashboard/dashboard.component.html
@@ -1,20 +1,20 @@
 <p>
     <mat-toolbar color="primary" class="toolbar mat-elevation-z4">
         <span>Olá, {{nameUser}}</span>
-        <span>SIGIOT</span>
+        <span>SIGIoT</span>
     </mat-toolbar>
 </p>
 
 <mat-sidenav-container>
     <mat-sidenav mode="side" opened fixedInViewport="true" fixedTopGap="64" class="sidenav">
         <mat-nav-list>
-            <a mat-list-item>
+            <a mat-list-item (click)="navHome()">
                 <mat-icon>home</mat-icon>
                 Início
             </a>
         </mat-nav-list>
         <mat-nav-list>
-            <a mat-list-item>
+            <a mat-list-item (click)="navMyBoards()">
                 <mat-icon>dataset</mat-icon>
                 Minhas placas
             </a>
