--- a/src/app/views/account-register/account-register.component.css
+++ b/src/app/views/account-register/account-register.component.css
@@ -5,7 +5,11 @@
 }
 
 .logo {
-    flex-grow: 5;
+    background-color: white;
+    background-image: url("/assets/background_authenticate.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
 }
 
 .formulario {
@@ -21,12 +25,12 @@
     flex-direction: column;
 }
 
-a{
+a {
     text-align: end;
     text-decoration: none;
 }
 
-.forgotPassword{
+.forgotPassword {
     width: min-content;
 }
 
