--- a/src/app/views/account-register/account-register.component.html
+++ b/src/app/views/account-register/account-register.component.html
@@ -1,6 +1,5 @@
 <div class="container">
-    <div class="logo mat-app-background">
-        <h1>ILUSTRAÇÃO</h1>
+    <div class="logo" style="flex-grow: 1">
     </div>
 
     <div class="formulario">
@@ -44,10 +43,12 @@
             </mat-form-field>
             <mat-form-field>
                 <input matInput type="password" placeholder="Confirmar senha" formControlName="confirmPassword">
-                <mat-error *ngIf="form.get('confirmPassword')?.hasError('minlength') && form.get('confirmPassword')?.touched">
+                <mat-error
+                    *ngIf="form.get('confirmPassword')?.hasError('minlength') && form.get('confirmPassword')?.touched">
                     Sua senha deve conter no mínimo 8 caracteres
                 </mat-error>
-                <mat-error *ngIf="form.get('confirmPassword')?.hasError('required') && form.get('confirmPassword')?.touched">
+                <mat-error
+                    *ngIf="form.get('confirmPassword')?.hasError('required') && form.get('confirmPassword')?.touched">
                     Campo obrigatório
                 </mat-error>
             </mat-form-field>
