--- a/src/app/views/my-keys/my-keys.component.html
+++ b/src/app/views/my-keys/my-keys.component.html
@@ -24,7 +24,7 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
 
-<h3 *ngIf="myKeys.length == 0">
+<h3 *ngIf="myKeys.length == 0 && !isLoading">
     <div class="keys-empty mat-elevation-z3">
         <div class="row">
             <mat-icon [ngStyle]="{color: 'red'}">error</mat-icon>
