--- a/src/app/views/register-board/register-board.component.html
+++ b/src/app/views/register-board/register-board.component.html
@@ -10,7 +10,7 @@
 </h3>
 
 <div class="content mat-elevation-z3">
-    <form [formGroup]="form" validate class="formulario">
+    <form [formGroup]="form" novalidate class="formulario" >
         <mat-form-field>
             <input matInput placeholder="Nome" formControlName="device_nickname">
             <mat-error *ngIf="form.get('device_nickname')?.hasError('required') && form.get('device_nickname')?.touched">
