--- a/src/app/views/login/login.component.css
+++ b/src/app/views/login/login.component.css
@@ -2,17 +2,23 @@
     display: flex;
     height: 100%;
     width: 100%;
+    background-color: #000000;
 }
 
 .logo {
-    background-color: white;
-    background-image: url("/assets/background_authenticate.png");
+    background-image: url("/assets/logo_sigiot.svg");
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
+    margin: 32px;
+}
+
+.title{
+    text-align: center;
 }
 
 .formulario {
+    background-color: #FFFFFF;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
