--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,6 +1,8 @@
-<mat-card class="home mat-elevation-z3">
-    <mat-card-title>Seja bem-vindo ao SIGIoT!</mat-card-title>
-    <mat-card-subtitle>
+<div class="header-page mat-elevation-z3">
+    <div class="title">
+        Seja bem-vindo ao <div class="spacer"></div> <h2> SIGIoT!</h2>
+    </div>
+    <div class="subtitle">
         Sistema Integrado de Gerenciamento IoT.
-    </mat-card-subtitle>
-</mat-card>
+    </div>
+</div>
