--- a/src/app/templates/dashboard/dashboard.component.html
+++ b/src/app/templates/dashboard/dashboard.component.html
@@ -1,12 +1,12 @@
 <p>
-    <mat-toolbar color="primary" class="toolbar mat-elevation-z4">
+    <mat-toolbar class="toolbar mat-elevation-z4">
         <span>Olá, {{nameUser}}</span>
-        <span>SIGIoT</span>
+        <span></span>
     </mat-toolbar>
 </p>
 
-<mat-sidenav-container>
-    <mat-sidenav mode="side" opened fixedInViewport="true" fixedTopGap="64" class="sidenav">
+<mat-sidenav-container >
+    <mat-sidenav mode="side" opened fixedInViewport="true" fixedTopGap="80" class="sidenav">
         <mat-nav-list>
             <a mat-list-item (click)="navHome()">
                 <mat-icon>home</mat-icon>
@@ -39,12 +39,12 @@
         </mat-nav-list>
     </mat-sidenav>
 
-    <mat-sidenav-content class="content">
+    <mat-sidenav-content class="sidenav-content">
         <router-outlet></router-outlet>
     </mat-sidenav-content>
 
 </mat-sidenav-container>
 
-<mat-toolbar class="footer">
+<!-- <mat-toolbar class="footer">
     <h4>Desenvolvido por Gustavo Werkhaizer e Miller Lopes</h4>
-</mat-toolbar>
+</mat-toolbar> -->
