--- a/src/app/views/my-keys/my-keys.component.css
+++ b/src/app/views/my-keys/my-keys.component.css
@@ -11,6 +11,8 @@
 .table{
     width: 100%;
     border-radius: 4px;
+    font-family: Raleway;
+    font-size: 16px;
 }
 
 .keys-empty{
@@ -26,4 +28,11 @@
     justify-content: center;
     align-items: center;
     vertical-align: center;
+}
+
+.table-header{
+    font-family: "Squada One";
+    font-size: 35px;
+    color: #00FFFF;
+    background-color: #000000;
 }
