--- a/src/app/views/my-keys/my-keys.component.html
+++ b/src/app/views/my-keys/my-keys.component.html
@@ -1,26 +1,24 @@
 <h3>
-    <div class="content mat-elevation-z3">
-        <div style="flex-grow: 1">
+    <div class="header-page mat-elevation-z3">
+        <div class="header-page-title">
             Minhas Chaves
         </div>
-        <div *ngIf="isLoading">
-            <mat-progress-bar mode="query" id="progress"></mat-progress-bar>
-        </div>
+        <mat-progress-bar *ngIf="isLoading" mode="query" id="progress"></mat-progress-bar>
     </div>
 </h3>
 
 <table *ngIf="myKeys.length > 0" mat-table [dataSource]="myKeys" class="table mat-elevation-z3">
     <ng-container matColumnDef="license_key">
-        <th mat-header-cell *matHeaderCellDef> Chave </th>
+        <th mat-header-cell *matHeaderCellDef class="table-header"> Chave </th>
         <td mat-cell *matCellDef="let element"> {{element.license_key}} </td>
     </ng-container>
 
     <ng-container matColumnDef="in_use">
-        <th mat-header-cell *matHeaderCellDef> Ativa </th>
-        <td mat-cell *matCellDef="let element"> {{element.in_use ? 'Sim' : 'Não'}} </td>
+        <th mat-header-cell *matHeaderCellDef class="table-header"> Status </th>
+        <td mat-cell *matCellDef="let element"> {{element.in_use ? 'Ativada' : 'Desativada'}} </td>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns" class="table-header"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
 
@@ -36,6 +34,6 @@
 
 <div *ngIf="myKeys.length > 0" class="padding"></div>
 
-<button *ngIf="!isLoading" mat-raised-button (click)="addKey()" color="primary">
-    ADICIONAR CHAVE
+<button *ngIf="!isLoading" mat-raised-button (click)="addKey()" class="botao">
+    Adicionar Chave
 </button>
