[ADD] Adicao de estilo para registrar placa

--- a/src/app/views/register-board/register-board.component.css
+++ b/src/app/views/register-board/register-board.component.css
@@ -6,7 +6,7 @@
 
 .formulario {
     background-color: #FFFFFF;
-    padding: 12px;
+    padding: 12px 12px 0px 12px; 
     border-radius: 4px;
     display: flex;
     flex-direction: column;
